# GiFo-RFC-0125-GAuth-Open-Core-Python-SDK

./: .replit  ADDITIONAL-TERMS.md  LICENSE  README.md  package.json  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--GAuth-SDK-Implementation-Guide-Version-1-0-Date-2026-0_1775820503091.txt  Pasted--GiFo-RFC-0117-GAuth-Policy-Enforcement-Point-Interface_1775643620613.txt  Pasted--GiFo-RFC-0118-GAuth-Management-API-Administration-Inte_1775734847760.txt  Pasted-Ich-habe-dein-Repository-GiFo-RFC-0125-GAuth-Open-Core-_1775850363922.txt
docs/: contribution-and-release-policy.md  gauth-sdk-implementation-guide.md
gauth-core/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
gauth-core/gauth_core/: __init__.py
gauth-core/gauth_core/adapters/: __init__.py  base.py  defaults.py  registry.py
gauth-core/gauth_core/http/: __init__.py  app.py
gauth-core/gauth_core/mgmt/: __init__.py  service.py
gauth-core/gauth_core/pep/: __init__.py  checks.py  engine.py
gauth-core/gauth_core/profiles/: __init__.py  ceilings.py
gauth-core/gauth_core/schema/: __init__.py  enums.py  mgmt.py  pep.py  poa.py  vc.py
gauth-core/gauth_core/storage/: __init__.py  base.py  memory.py  sqlalchemy.py
gauth-core/gauth_core/utils/: __init__.py  checksums.py
gauth-core/gauth_core/validation/: __init__.py  pipeline.py
gauth-core/gauth_core/vc/: __init__.py  did.py  openid.py  sd_jwt.py  serializer.py  status_list.py
gauth-core/tests/: test_adapters.py  test_checksums.py  test_conformance_block_a.py  test_conformance_block_b.py  test_mgmt.py  test_pep.py  test_profiles.py  test_schema.py  test_validation.py
lib/api-spec/: openapi.yaml  (+1 more)
scripts/: package.json
(+32 files in other folders)
